--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Auto-Correction System</title>
+    <title>AI-Driven Auto Correction and Enhancement System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -32,7 +32,7 @@
     <section class="hero-bg min-h-screen flex items-center">
         <div class="container mx-auto px-4">
             <div class="max-w-2xl bg-black bg-opacity-70 p-8 rounded-lg text-white">
-                <h1 class="text-4xl font-bold mb-4">AI-Powered Text Enhancement</h1>
+                <h1 class="text-4xl font-bold mb-4">AI-Driven Auto Correction and Enhancement System</h1>
                 <p class="text-xl mb-8">Transform your writing with our advanced AI correction system that improves grammar, style, and clarity.</p>
                 <div class="flex space-x-4">
                     <a href="demo.html" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-medium">Try Demo</a>
